--- a/CSS/index.css
+++ b/CSS/index.css
@@ -22,7 +22,7 @@
     background-position: center;
 }
 
-.card {
+.card-treecko {
     background-color: var(--color-fondo);
     max-width: 320px;
     margin: auto;
@@ -32,24 +32,24 @@
     
 }
 
-.card:hover {
+.card-treecko:hover {
     border-color: rgb(25, 117, 63);
 }
 
-.card__header {
+.card-treecko__header {
     background-color: rgba(92, 207, 79, 0.61);
     text-align: center;
     padding: 1rem;
 }
 
-.card__img {
+.card-treecko__img {
     display: inline-block;
     object-fit: cover;
     width: min(1005, 256px);
 }
 
 
-.card__body {
+.card-treecko__body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -57,30 +57,30 @@
     padding: 1rem;
 }
 
-.card__title {
+.card-treecko__title {
     margin: 0;
     font-size: 2rem;
 }
 
-.card__subtitle {
+.card-treecko__subtitle {
     margin: 0;
     font-size: 1rem;
 }
 
-.card__text {
+.card-treecko__text {
     margin: 0;
     text-align: center;
     font-size: 1rem;
 }
 
 
-.card__footer {
+.card-treecko__footer {
     background-color: rgba(92, 207, 79, 0.61);
     text-align: center;
     padding: 1rem;
 }
 
-.menu {
+.menu-treecko {
     display: flex;
     justify-content: center;
     list-style: none;
