--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,90 +1,5 @@
-:root {
-    --color-fondo: rgba(255, 255, 255, 0.775);
-    --text-color-1: aliceblue;
-    --text-color-2: rgb(0, 0, 0);
-    --font-family: 'Times New Roman', Times, serif;
-}
-
-.body {
-    background-color: var(--color-fondo);
-    font-family: var(--font-family);
-    color: var(--text-color-2);
-    margin: 0;
-    
-}
+@import url(/CSS/variables.css);
+@import url(/CSS/body.css);
+@import url(/CSS/card-treecko.css);
 
 
-.hero {
-    display: flex;
-    background-image: url(/img/svg/EiDzB8WXYAIRINE.png);
-    min-height: 100vh;
-    background-size: cover;
-    background-position: center;
-}
-
-.card-treecko {
-    background-color: var(--color-fondo);
-    max-width: 320px;
-    margin: auto;
-    border: 0.5rem solid  rgb(255, 255, 255);
-    border-radius: 1rem;
-    overflow: hidden;
-    
-}
-
-.card-treecko:hover {
-    border-color: rgb(25, 117, 63);
-}
-
-.card-treecko__header {
-    background-color: rgba(92, 207, 79, 0.61);
-    text-align: center;
-    padding: 1rem;
-}
-
-.card-treecko__img {
-    display: inline-block;
-    object-fit: cover;
-    width: min(1005, 256px);
-}
-
-
-.card-treecko__body {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: rgba(21, 184, 21, 0.536);
-    padding: 1rem;
-}
-
-.card-treecko__title {
-    margin: 0;
-    font-size: 2rem;
-}
-
-.card-treecko__subtitle {
-    margin: 0;
-    font-size: 1rem;
-}
-
-.card-treecko__text {
-    margin: 0;
-    text-align: center;
-    font-size: 1rem;
-}
-
-
-.card-treecko__footer {
-    background-color: rgba(92, 207, 79, 0.61);
-    text-align: center;
-    padding: 1rem;
-}
-
-.menu-treecko {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 1rem;
-}
