--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,4 @@
 @import url(/CSS/variables.css);
 @import url(/CSS/body.css);
 @import url(/CSS/card-treecko.css);
-
-
+@import url(/CSS/card-torchic.css);
