--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,5 @@
 @import url(/CSS/variables.css);
 @import url(/CSS/body.css);
-@import url(/CSS/card-treecko.css);
-@import url(/CSS/card-torchic.css);
+@import url(/CSS/card_treecko.css);
+@import url(/CSS/card_torchic.css);
+@import url(/CSS/card_mudkip.css);
