--- a/CSS/body.css
+++ b/CSS/body.css
@@ -9,7 +9,7 @@
 
 .hero {
     display: flex;
-    background-image: url(/img/svg/EiDzB8WXYAIRINE.png);
+    background-image: url(/img/svg/fondo_pokemon_1.jpg);
     min-height: 100vh;
     background-size: cover;
     background-position: center;
