cambio de fondo

--- a/CSS/body.css
+++ b/CSS/body.css
@@ -9,7 +9,7 @@
 
 .hero {
     display: flex;
-    background-image: url(/img/svg/fondo_pokemon_1.jpg);
+    background-image: url('https://pm1.narvii.com/6159/ce9eeb5b1114993b7f9676a11d7d8d4e72e4ea9c_hq.jpg');
     min-height: 100vh;
     background-size: cover;
     background-position: center;
